<resources>
    <string name="app_name">SYM-Labo3</string>
    <string name="qr_label">Code-barres</string>
    <string name="beacon_label">iBeacon</string>
    <string name="nfc_label">NFC</string>
    <string name="scan_label">Scan barcode</string>
    <string name="login_btn_label">Login</string>
    <string name="login_email_label">Email</string>
    <string name="login_password_label">Password</string>
    <string name="security_level_max">Max Security (10s)</string>
    <string name="security_level_medium">Medium Security (30s)</string>
    <string name="security_level_low">Min Security (60s)</string>
    <string name="has_nfc_label_no">Please scan NFC</string>
    <string name="has_nfc_label_yes">Access granted !</string>
    <string name="should_scan_tag">Please scan NFC tag</string>
    <string name="invalid_creds">Invalid credentials</string>
    <string name="security_granted">Level of security granted</string>
    <string name="security_not_granted">Level of security denied</string>
    <string name="access_renewed">Access renewed</string>
    <string name="must_access_camera">L\'accès à la caméra est nécessaire</string>
    <string name="uuid">UUID : %1$s</string>
    <string name="minor">minor : %1$s</string>
    <string name="major">major : %1$s</string>
    <string name="rssi">rssi : %1$d</string>
    <string name="distance">distance : %1$s m</string>
    <string name="last_detection_date">last detection date : %1$s</string>
    <string name="id">Id : %1$d</string>
    <string name="trying_to_detect_beacons">Trying to detect beacons …</string>
    <string name="must_access_location">L\'accès à la localisation est nécessaire</string>
</resources>