<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <TextView
        android:id="@+id/UUID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/uuid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/id"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/minor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/minor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/major"
        app:layout_constraintTop_toBottomOf="@+id/UUID" />

    <TextView
        android:id="@+id/major"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/major"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UUID" />

    <TextView
        android:id="@+id/rssi"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/rssi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/major" />

    <TextView
        android:id="@+id/distance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/distance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rssi"
        app:layout_constraintTop_toBottomOf="@+id/minor" />

    <TextView
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/last_detection_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rssi" />

    <TextView
        android:id="@+id/id"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>