<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_qr_launch"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:text="@string/qr_label" />

        <Button
            android:id="@+id/btn_beacon_launch"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:text="@string/beacon_label" />

        <Button
            android:id="@+id/btn_nfc_launch"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:text="@string/nfc_label" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>